<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc3d"
    android:orientation="vertical"
    tools:context=".Activity_3_Wishlist">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item3_nav"
        android:textColor="@color/pb_04"
        android:textSize="70dp"
        app:fontFamily="cursive" />

    <EditText
        android:id="@+id/txtShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60px"
        android:hint="@string/ac3_shopName"/>

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60px"
        android:hint="@string/ac3_desc"/>

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60px"
        android:hint="@string/ac3_price"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pb_03"
        android:alpha="0.7"
        android:text="@string/ac3_btn"/>

</LinearLayout>